<resources>
    <string name="app_name">晓悟</string>
    <string name="unpaid">待支付</string>
    <string name="no_travel">待出行</string>
    <string name="travel">已出行</string>
    <string name="exitTicket_failed">出票失败</string>
    <string name="exit_ticket_info">正在为您出票</string>
    <string name="exit_ticket">出票中</string>
    <string name="refunding">退款中</string>
    <string name="deal_close">交易关闭</string>
    <string name="change_ticket">改签中</string>
    <string name="occupy_seat">占座中</string>
    <string name="canceling">取消中</string>
    <string name="refund_moneyed">已退款</string>
    <string name="send_content_not_null">发送内容不能为空</string>
    <string name="net_error">没有联网，我们无法为您提供服务</string>
    <string name="not_fuel_oil">不含机建燃油</string>
    <string name="money_sign">¥</string>
    <string name="drive">车程</string>
    <string name="day2">日</string>
    <string name="month">月</string>
    <string name="voyage">航程</string>
    <string name="transit">经停</string>
    <string name="hotel_money_sign">均 ¥</string>
    <string name="kilometre">公里</string>
    <string name="distance">距离</string>
    <string name="header_image">头像</string>
    <string name="nickname">昵称</string>
    <string name="phone_number">手机号</string>
    <string name="photo_album_access_denied">相册访问被拒绝</string>
    <string name="hot_movie">热映影片</string>
    <string name="look_more">查看更多</string>
    <string name="card_not_support_select">该卡片暂不支持重新选择</string>
    <string name="weight">重量</string>
    <string name="order_price">订单价格</string>
    <string name="get_price">获取价格</string>
    <string name="submit_order">提交订单</string>
    <string name="charge">充值</string>
    <string name="selling_price">售价</string>
    <string name="play_list">播放列表</string>
    <string name="close">关闭</string>
    <string name="birthplace">出生地</string>
    <string name="present_address">现居地</string>
    <string name="please_choose">请选择</string>
    <string name="speed_pair">快速脱单</string>
    <string name="enter_your_info">请输入您的信息</string>
    <string name="enter_opposite_info">请输入对方的信息</string>
    <string name="constellation_fortune">运势查询</string>
    <string name="enter_info_make_result">输入信息为您生成测试结果</string>
    <string name="marriage_value">结婚指数</string>
    <string name="lovers_disc_all_test">情侣匹配全测</string>
    <string name="lovers_disc_fortune_report">情侣合盘运势报告</string>
    <string name="comprehensive_month_fortune">综合月运</string>
    <string name="single_month_fortune">脱单运势</string>
    <string name="work_month_fortune">职场运势</string>
    <string name="money_month_fortune">财富运势</string>
    <string name="birth_date">出生日期</string>
    <string name="subscribe_date">订阅日期</string>
    <string name="lovers_disc">情侣合盘</string>
    <string name="gender">性别</string>
    <string name="man">男</string>
    <string name="woman">女</string>
    <string name="taxi_invalid">信息已超时，请重新查询</string>
    <string name="read_all_report">阅读全部报告</string>
    <string name="listen_all_report">聆听全部报告</string>
    <string name="test_report">测试报告</string>
    <string name="test_immediately">立即测试</string>
    <string name="reacquire_after_second">秒后重新获取</string>
    <string name="get_captcha">获取验证码</string>
    <string name="image_captcha">图片验证码</string>
    <string name="captcha_error_again_input">验证码错误，请重新输入</string>
    <string name="input_captcha">输入验证码</string>
    <string name="please_input_captcha">请输入验证码</string>
    <string name="sms_send_succeed">短信验证码发送成功</string>
    <string name="default_number">默认号码</string>
    <string name="unknown_number">未知号码</string>
    <string name="jihuo_again">请问是否重新激活</string>
    <string name="cancel_order">取消订单</string>
    <string name="delete_order">删除订单</string>
    <string name="movie_agreement">《电影票用户服务协议》</string>
    <string name="order_id">订单号</string>
    <string name="make_ticket_failed_refunding">出票失败 退款中</string>
    <string name="make_ticket_failed_refunding2">出票失败\n退款中</string>
    <string name="movie">电影票</string>
    <string name="air_ticket">机票</string>
    <string name="origin_time">出发时间</string>
    <string name="total">合计</string>
    <string name="train_ticket">火车票</string>
    <string name="screened">已放映</string>
    <string name="wait_screened">待放映</string>
    <string name="trace_shibai_tuikuan2">交易失败\n退款中</string>
    <string name="processing">处理中</string>
    <string name="no_use">待使用</string>
    <string name="is_use">已使用</string>
    <string name="all">全部</string>
    <string name="cancel_refund">取消/退款</string>
    <string name="my_order">我的订单</string>
    <string name="all_order">全部订单</string>
    <string name="to_pay">去支付</string>
    <string name="contact_service">联系客服</string>
    <string name="order_info">订单信息</string>
    <string name="contact_phone">联系电话</string>
    <string name="buy_order_time">下单时间</string>
    <string name="already_copy">已复制</string>
    <string name="time_table">时刻表</string>
    <string name="refund_rule">退票/改签规则</string>
    <string name="train_passenger">乘车人</string>
    <string name="selected_seat">选择座位</string>
    <string name="windows">窗</string>
    <string name="aisle">过道</string>
    <string name="train_seat_warn">优先按指定坐席出票，若指定坐席无票，将转购其他坐席</string>
    <string name="click_submit_order_agree">点击提交订单表示已阅读并同意</string>
    <string name="train_service_rule">【火车票订票服务协议】</string>
    <string name="order_amount">订单总价</string>
    <string name="details">明细</string>
    <string name="order_price_detail">订单价格明细</string>
    <string name="identity_card">身份证</string>
    <string name="protection">护照</string>
    <string name="MTPs">台湾通行证</string>
    <string name="hk_and_macau_pass">港澳通行证</string>
    <string name="hk_and_macau_from_pass">港澳往返内地通行证</string>
    <string name="tw_from_pass">台湾往返内地通行证</string>
    <string name="officer_card">军官证</string>
    <string name="soldier_card">士兵证</string>
    <string name="contact">联系人</string>
    <string name="aviation_accident_insurance">航空意外险</string>
    <string name="traffic_accident_insurance">交通意外险</string>
    <string name="fuel_oil">机建+燃油</string>
    <string name="please_input_contact_name">请输入联系人姓名</string>
    <string name="receive_order_feedback">用于接收订单反馈</string>
    <string name="no_ticket">无票</string>
    <string name="have_ticket">有票</string>
    <string name="person">人</string>
    <string name="minute">分钟</string>
    <string name="train_time_table">列车时刻表</string>
    <string name="please_choose_train_passenger">请选择乘车人</string>
    <string name="please_input_right_phone">请输入正确的手机号</string>
    <string name="confirm_order">确认订单</string>
    <string name="name_and_certificate_must_same">注意：因姓名与证件号姓名不一致导致的出行问题后果自行承担</string>
    <string name="name">姓名</string>
    <string name="name2">名称</string>
    <string name="name_consistent">请确保与您证件上的姓名一致</string>
    <string name="certificate_number">证件号</string>
    <string name="your_certificate_number">请仔细填写您的证件号码</string>
    <string name="date_of_birth">出生日期</string>
    <string name="date_of_birth_consistent">出生日期应与证件一致</string>
    <string name="spell_surname">拼音姓</string>
    <string name="spell_name">拼音名</string>
    <string name="spell_surname_hint">如“王小二”填“WANG”</string>
    <string name="spell_name_hint">如“王小二”填“XIAOER”</string>
    <string name="certificate_type">证件类型</string>
    <string name="use_receive_order_info">用于接收订单信息</string>
    <string name="room_one">1间</string>
    <string name="room_two">2间</string>
    <string name="room_three">3间</string>
    <string name="room_four">4间</string>
    <string name="room_five">5间</string>
    <string name="year">年</string>
    <string name="please_input_certificate_number">请填写证件号</string>
    <string name="please_input_name">请填写姓名</string>
    <string name="please_choose_birth">请选择生日</string>
    <string name="please_choose_gender">请选择性别</string>
    <string name="please_input_phone_number">请填写手机号</string>
    <string name="contact_name_format_error">姓名请填写2-6位汉字</string>
    <string name="add_pedestrian">添加出行人</string>
    <string name="make_ticket_steady">出票速度有保障</string>
    <string name="adult_ticket">成人票</string>
    <string name="child_ticket_rule">儿童/婴儿票规则</string>
    <string name="update_luggage">退改及行李额</string>
    <string name="air_passenger">乘机人</string>
    <string name="make_invoice">开具发票</string>
    <string name="flight_after_7_day_send_email">航班起飞后7个工作日内发送至邮箱</string>
    <string name="company">公司</string>
    <string name="personage">个人</string>
    <string name="personage_or_other">个人或其他</string>
    <string name="enterprise_unit">政企单位</string>
    <string name="messrs">抬头名称</string>
    <string name="please_input_messrs">请填写发票抬头</string>
    <string name="tax_File_Number">税号</string>
    <string name="taxpayer_number">纳税人识别号</string>
    <string name="email">邮箱</string>
    <string name="please_input_taxpayer_number">请输入纳税人识别号</string>
    <string name="please_input_tax_File_Number">请填写税号</string>
    <string name="recipients">收件人</string>
    <string name="please_input_your_name">请填写真实姓名</string>
    <string name="other_info_optional">其他信息（选填）</string>
    <string name="invoice_type">发票类型</string>
    <string name="to_trip">去程</string>
    <string name="return_trip">返程</string>
    <string name="please_input_enterprise_name">请输入企业名称</string>
    <string name="please_input_email">请输入邮箱</string>
    <string name="receive_electron_invoice">用于接收电子发票</string>
    <string name="receive_info_feedback">用于接收反馈消息</string>
    <string name="issued_within_27_days_after">航班起飞后27天内可补开报销凭证</string>
    <string name="register_address">注册地址</string>
    <string name="register_phone">注册手机号</string>
    <string name="make_account_bank">开户银行</string>
    <string name="make_account">开户账户</string>
    <string name="please_input_company_register_address">请输入企业注册地址</string>
    <string name="please_input_company_register_phone">请输入企业注册电话</string>
    <string name="please_input_company_mack_account_bank">请输入企业开户银行名称</string>
    <string name="please_input_company_mack_account">请输入企业开户银行账户</string>
    <string name="please_input_phone">请输入手机号</string>
    <string name="register_tel">注册电话</string>
    <string name="please_input_name2">请输入名称</string>
    <string name="under_300_please_to_invoice_control">未满300元请下单后至“发票管理”页自行开具</string>
    <string name="hint_give_up_order">订单还未提交，确认放弃吗？</string>
    <string name="please_choose_air_passenger">请选择乘机人</string>
    <string name="please_write_contact_name">请填写联系人姓名</string>
    <string name="please_write_phone">请填写手机号</string>
    <string name="please_write_right_phone">请填写正确的手机号</string>
    <string name="price_detail">价格明细</string>
    <string name="refund">退票</string>
    <string name="refund_succeed">退票成功</string>
    <string name="refund_detail">退款明细</string>
    <string name="share_route">分享旅程</string>
    <string name="cost_detail">费用明细</string>
    <string name="cancel_reserve">取消预订</string>
    <string name="ticket_changing2">签转</string>
    <string name="look_refund_rule">查看退改签规则</string>
    <string name="refund_need_some_day">退款需要7-15天，请耐心等待</string>
    <string name="applying_refund_for_you">正在为您申请退款</string>
    <string name="make_ticket_for_company_about">出票时间与航空公司相关，请耐心等候</string>
    <string name="enjoy_your_trip">祝您旅途愉快</string>
    <string name="your_succeed_use_service">您已成功使用服务</string>
    <string name="submitted_info_for_you">已为您提交信息，正在等待酒店确认</string>
    <string name="initiate_refund_request">正在为您发起退订请求，请耐心等待</string>
    <string name="request_error_so_failed2">请求异常导致预订失败了</string>
    <string name="request_error_so_failed">请求异常导致出票失败</string>
    <string name="refund_completed">已完成退款</string>
    <string name="the_refund">退票中</string>
    <string name="order_canceled">订单已取消</string>
    <string name="timeout_auto_cancel">超时自动取消</string>
    <string name="predict_24_hour_result">预计24小时内返回退票结果</string>
    <string name="occupy_seat_ing">正在为您占座，请稍等</string>
    <string name="seat_no">座位号</string>
    <string name="we_chat_pay">微信支付</string>
    <string name="ali_pay">支付宝支付</string>
    <string name="pay_complete">支付完毕</string>
</resources>