<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:descendantFocusability="afterDescendants"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_20">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@mipmap/index_dialog_yellow"
            android:textColor="@color/colorText"
            android:textSize="@dimen/sp_15" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/dp_5"
            app:cardElevation="@dimen/dp_0">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_12"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/lovers_disc"
                    android:textColor="@color/color2A2A2A"
                    android:textSize="@dimen/sp_18" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_marginBottom="@dimen/dp_4"
                    android:text="@string/enter_your_info"
                    android:textColor="@color/colorB3B3B3"
                    android:textSize="@dimen/sp_13" />


                <include
                    android:id="@+id/iBirthdayGender1"
                    layout="@layout/layout_birthday_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_marginBottom="@dimen/dp_4"
                    android:text="@string/enter_opposite_info"
                    android:textColor="@color/colorB3B3B3"
                    android:textSize="@dimen/sp_13" />

                <include
                    android:id="@+id/iBirthdayGender2"
                    layout="@layout/layout_birthday_gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />


                <android.support.v7.widget.CardView
                    android:id="@+id/cvGetPrice"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:layout_marginTop="@dimen/dp_42"
                    android:clickable="true"
                    app:cardBackgroundColor="@color/colorFFD400"
                    app:cardCornerRadius="@dimen/dp_5"
                    app:cardElevation="@dimen/dp_0">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/get_price"
                        android:textColor="@color/color2A2A2A"
                        android:textSize="@dimen/sp_15" />


                </android.support.v7.widget.CardView>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>
</layout>