<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_12"
        android:layout_marginRight="@dimen/dp_12"
        android:descendantFocusability="afterDescendants"
        android:orientation="vertical"
        android:paddingBottom="@dimen/dp_20">

        <TextView
            android:id="@+id/tvText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@mipmap/index_dialog_yellow"
            android:textColor="@color/colorText"
            android:textSize="@dimen/sp_15" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_12"
            app:cardBackgroundColor="@color/colorWhite"
            app:cardCornerRadius="@dimen/dp_5"
            app:cardElevation="@dimen/dp_0">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dp_12"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speed_pair"
                    android:textColor="@color/color2A2A2A"
                    android:textSize="@dimen/sp_18" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_4"
                    android:layout_marginBottom="@dimen/dp_4"
                    android:text="@string/enter_info_make_result"
                    android:textColor="@color/colorB3B3B3"
                    android:textSize="@dimen/sp_13" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingRight="@dimen/dp_20"
                            android:text="@string/birth_date"
                            android:textColor="@color/color2A2A2A"
                            android:textSize="@dimen/sp_15" />

                        <LinearLayout
                            android:id="@+id/llBirthDay"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:clickable="true"
                            android:gravity="center_vertical">

                            <TextView
                                android:id="@+id/tvBirthday"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:textColor="@color/color2A2A2A"
                                android:textSize="@dimen/sp_15" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@mipmap/anv_btn_back" />
                        </LinearLayout>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="3"
                        android:orientation="horizontal">

                    </LinearLayout>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_8"
                    android:layout_marginBottom="@dimen/dp_8"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="3"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/gender"
                            android:textColor="@color/color2A2A2A"
                            android:textSize="@dimen/sp_15" />

                        <ImageView
                            android:id="@+id/ivGenderMan"
                            android:layout_width="@dimen/dp_20"
                            android:layout_height="@dimen/dp_20"
                            android:layout_marginLeft="@dimen/dp_8"
                            android:layout_marginRight="@dimen/dp_4"
                            android:padding="@dimen/dp_2"
                            android:src="@mipmap/btn_profile_selected" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/man"
                            android:textColor="@color/color2A2A2A"
                            android:textSize="@dimen/sp_15" />

                        <ImageView
                            android:id="@+id/ivGenderWoman"
                            android:layout_width="@dimen/dp_20"
                            android:layout_height="@dimen/dp_20"
                            android:layout_marginLeft="@dimen/dp_8"
                            android:layout_marginRight="@dimen/dp_4"
                            android:padding="@dimen/dp_2"
                            android:src="@mipmap/btn_profile_selected" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/woman"
                            android:textColor="@color/color2A2A2A"
                            android:textSize="@dimen/sp_15" />
                    </LinearLayout>

                </LinearLayout>

                <android.support.v7.widget.CardView
                    android:id="@+id/cvGetPrice"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_44"
                    android:layout_marginTop="@dimen/dp_42"
                    android:clickable="true"
                    app:cardBackgroundColor="@color/colorFFD400"
                    app:cardCornerRadius="@dimen/dp_5"
                    app:cardElevation="@dimen/dp_0">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/get_price"
                        android:textColor="@color/color2A2A2A"
                        android:textSize="@dimen/sp_15" />


                </android.support.v7.widget.CardView>
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</layout>