<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            android:id="@+id/iHeadLayout"
            layout="@layout/layout_header" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorF7F7F7">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/dp_70"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dp_15"
                    android:gravity="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/sp_14"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_50"
                    android:layout_marginTop="@dimen/dp_15"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/tvAliPay"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/ali_pay"
                        android:textColor="@color/colorFFD400"
                        android:textSize="@dimen/sp_20" />


                    <TextView
                        android:id="@+id/tvWeChat"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/we_chat_pay"
                        android:textColor="@color/color2A2A2A"
                        android:textSize="@dimen/sp_20" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/ivCode"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/dp_20"
                    android:scaleType="fitCenter" />
            </LinearLayout>


            <TextView
                android:id="@+id/tvPayComplete"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_66"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/dp_15"
                android:background="@color/colorFFD400"
                android:gravity="center"
                android:text="@string/pay_complete"
                android:textColor="@color/color2A2A2A"
                android:textSize="@dimen/sp_24" />
        </FrameLayout>
    </LinearLayout>
</layout>